Fixed bug #27963 (Session lifetime setting may leak between requests).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@155817 c90b9560-bf6c-de11-be94-00142212c4b1